<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/EmailInputLayout"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:layout_below="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:startIconDrawable="@drawable/baseline_email_24"
        android:layout_marginTop="30dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/passwordInputLayout"
        android:layout_height="wrap_content"
        android:hint="@string/Motpasse"
        android:layout_below="@+id/EmailInputLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/baseline_lock_24"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Connecter"
        android:id="@+id/loginButton"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:layout_below="@+id/passwordInputLayout"
        android:textColor="@color/white"
        android:layout_marginTop="30dp" />
    <TextView
        android:id="@+id/signupRedirectText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nonConnecter"
        android:layout_below="@+id/loginButton"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/motpasseoblier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Mot_de_passe_oublié"
        android:layout_below="@+id/signupRedirectText"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="18sp"
        android:gravity="center"/>

</RelativeLayout>
