<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="80dp"
    android:layout_marginBottom="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AjouterHistoire">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagehistoire"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/ic_menu_camera"
            android:layout_gravity="center"
            app:civ_border_width="1dp"
            app:civ_border_color="?attr/colorPrimaryVariant"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/Nomhistoire"
        android:layout_height="wrap_content"
        android:hint="@string/Nomhistoire"
        android:layout_below="@+id/imagehistoire"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/Description"
        android:layout_height="wrap_content"
        android:hint="@string/Description"
        android:layout_below="@+id/Nomhistoire"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="5"
            android:inputType="textMultiLine"
            android:gravity="top" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/URL"
        android:layout_height="wrap_content"
        android:hint="@string/URL"
        android:layout_below="@+id/Description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ajouter"
        android:id="@+id/Ajouter"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:layout_below="@+id/URL"
        android:textColor="@color/white"
        android:layout_marginTop="15dp" />

    </RelativeLayout>

</FrameLayout>