<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <ImageView
                android:layout_margin="10dp"
                android:id="@+id/imageview"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

                <TextView
                    android:id="@+id/textNom"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/NomDhistoire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/textDescription"
                    android:layout_margin="10dp"
                    android:text="@string/Resume"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
            <Button
                android:id="@+id/telecharger"
                android:layout_margin="10dp"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorOnSecondary"
                android:text="@string/Telecharger"
                android:textColor="@color/white"
                />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>