<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".quiz.ResultActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:elevation="0dp"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="?attr/colorPrimaryVariant">
        <com.google.android.material.appbar.MaterialToolbar
            app:title="@string/Resultat"
            app:titleCentered="true"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/card_background"
        app:strokeWidth="0dp"
        app:cardCornerRadius="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/resultImage"
                android:src="@drawable/ic_smile"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <TextView
                android:id="@+id/resultInfo"
                android:layout_marginTop="15dp"
                android:textColor="@color/yallow"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/Result_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/resultScore"
                android:textColor="@color/text_secondery_color"
                android:textSize="15sp"
                android:text="@string/Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="@color/card_background"
            app:strokeWidth="0dp"
            app:cardCornerRadius="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <ImageView
                    android:src="@drawable/ic_correct"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:layout_marginTop="15dp"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/Correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/correctScore"
                    android:textColor="@color/text_secondery_color"
                    android:textSize="15sp"
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="@color/card_background"
            app:strokeWidth="0dp"
            app:cardCornerRadius="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <ImageView
                    android:src="@drawable/ic_wrong"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:layout_marginTop="15dp"
                    android:textColor="@color/text_color"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/Wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/wrongScore"
                    android:textColor="@color/text_secondery_color"
                    android:textSize="15sp"
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/returnHome"
        app:cardBackgroundColor="@color/card_background"
        app:strokeWidth="0dp"
        app:cardCornerRadius="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="?attr/colorOnSecondary">
            <TextView
                android:id="@+id/resultTextview"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/Retour"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>