<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarLayout"
        app:statusBarForeground="@color/background"
        android:background="@color/background"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:elevation="0dp"
            android:background="@color/background"
            app:titleTextColor="@color/white"
            app:title="@string/app_name"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/facile"
                app:strokeWidth="0dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="?attr/colorOnSecondary">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:text="@string/Easy_Quiz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/difficile"
                app:strokeWidth="0dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="?attr/colorOnSecondary">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:text="@string/Difficult_Quiz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Apropos"
                app:cardBackgroundColor="@color/card_background"
                app:strokeWidth="0dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="?attr/colorOnSecondary">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:text="@string/About"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>